welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:9: error: ')' expected but 'else' found.
		case (ab,bc,ac)=> if ((ab > bc+10)||(ab > ac+10) {5} else {0}
                                                                     ^